--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="Icon" href="https://i.ibb.co/TwVntRh/netflix-logo-icon-170919.png" alt="NetflixIcon">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="netflix.css">
 </head>
 
 <body>
